--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -61,6 +61,7 @@
 html {
   height: 100%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
